--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>ALAT by Wema</title>
+    <!--<link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />-->
+    <!--<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />-->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -64,6 +66,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
     <script type="text/javascript" src="/public/assets/js/app.js"></script>
     <script src="bundle.js" type="text/javascript"></script>
 
