[Temitope]: Fix submit OTP for BVN Message parsed from page one of onboarding to Token page to display message Start of Resend OTP Start of Model State proper messages )for user friendliness) Cleaned uo Onboarding Reducer

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
     <script src="/src/assets/js/jquery.min.js"></script>
     <script src="/src/assets/js/matchHeight.js"></script>
     <script src="/src/assets/js/jquery.bxslider.js"></script>
-    <script src="/src/assets/js/selectize.min.js"></script>
+    <!--<script src="/src/assets/js/selectize.min.js"></script>-->
     <!-- Date picker -->
     <link href="/src/assets/css/datepicker.min.css" rel="stylesheet" type="text/css">
     <script src="/src/assets/js/datepicker.min.js"></script>
