[Dami]Get account, Dispaly balance infos && UI done(history)

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     -->
     <title>ALAT by Wema</title>
   </head>
-  <body>
+  <body style="background-color: #F2F5FE">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
