Api integration Done.

--- a/ALATv2HTML/loan-card-result.html
+++ b/ALATv2HTML/loan-card-result.html
@@ -76,7 +76,7 @@
 								</div>
 								<div class="al-card no-pad">
 									<div class="transfer-ctn no-pad unset-pad">
-										<div class="col-sm-12 upper-line"></div>
+										<div class="col-sm-12 upper-line-success"></div>
 										<div class="result-msg">
 											<p>Dear Customer</p>
 											<p>Congratulations!!! you have been granted a loan of <b>N600,000.00</b></p>
