[Benjamin] In progress

--- a/ALATv2HTML/loan-dashboard.html
+++ b/ALATv2HTML/loan-dashboard.html
@@ -125,6 +125,7 @@
 							<div class="loan-dsh-ctn">
 								<div class="sub-ctn dsh-left">
 									<h4 class="red-text m-b-20">Current Loan</h4>
+									<div style="border: 1px solid #E4E4E4;"></div>
 									<div class="shd-box seg">
 										<div class="header">
 											<h3 class="red-text">N4,000,000.00
