--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <base href="/"></base>
     <link rel="shortcut icon" href="/public/favicon.ico" />
     <meta
       name="viewport"
