--- a/public/index.html
+++ b/public/index.html
@@ -39,15 +39,15 @@
     -->
 
     <!--JQuery-->
-    <script src="/src/assets/js/jquery.min.js"></script>
+    <!-- <script src="/src/assets/js/jquery.min.js"></script>
     <script src="/src/assets/js/matchHeight.js"></script>
-    <script src="/src/assets/js/jquery.bxslider.js"></script>
+    <script src="/src/assets/js/jquery.bxslider.js"></script> -->
     <!--<script src="/src/assets/js/selectize.min.js"></script>-->
     <!-- Date picker -->
-    <link href="/src/assets/css/datepicker.min.css" rel="stylesheet" type="text/css">
-    <script src="/src/assets/js/datepicker.min.js"></script>
+    <!-- <link href="/src/assets/css/datepicker.min.css" rel="stylesheet" type="text/css">
+    <script src="/src/assets/js/datepicker.min.js"></script> -->
     <!-- Include English language -->
-    <script src="/src/assets/js/i18n/datepicker.en.js"></script>
+    <!-- <script src="/src/assets/js/i18n/datepicker.en.js"></script> -->
 
   </body>
 </html>
