--- a/public/index.html
+++ b/public/index.html
@@ -24,12 +24,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <!-- <script>
+        <script src='//cdnt.netcoresmartech.com/smartechclient.js'></script>
+        <script>
           smartech('create', 'ADGMOT35CHFLVDHBJNIG50K969IMEN9FGLV64IK700ES0Q6PC9G0');
           smartech('register', '29cf87b6d5883c3c73132b0392275321');
           smartech('identify', '');
           smartech('dispatch', 1, {});
-        </script> -->
+        </script>
 
     <title>ALAT by Wema</title>
   </head>
